--- a/www-weread/_includes/indexhead.html
+++ b/www-weread/_includes/indexhead.html
@@ -17,11 +17,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#49b7af">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="google-signin-client_id" content="877965125756-5611848l9aq03plmv9sk8ccadag7ikrk.apps.googleusercontent.com">
     <meta name="theme-color" content="#49b7af" />
-    
+
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
