--- a/www-weread/_includes/indexnav.html
+++ b/www-weread/_includes/indexnav.html
@@ -23,6 +23,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Extra <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
             <ul class="dropdown-menu forAnimate" role="menu">
               <li><a href="pages/login.html">Login</a></li>
+              <li><a href="pages/signup.html">Sign Up</a></li>
               <li><a href="pages/disclaimer.html">Disclaimer</a></li>
               <li><a href="pages/contact.html">Contact</a></li>
               <li class="divider"></li>
