--- a/www-weread/css/main.css
+++ b/www-weread/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   background-color: #f9f9f9;
   color: #222222;
@@ -46,6 +47,10 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: auto;
   margin-right: auto; }
 
+input {
+  border-radius: 5px;
+  border: 1px solid #49b7af; }
+
 .middletext {
   text-align: center; }
 
@@ -89,6 +94,13 @@ tr:nth-child(even) {
 #mailglyph {
   background-color: #49b7af; }
 
+#books > p:nth-child(odd) {
+  background-color: #49b7af;
+  padding: 3%;
+  border-radius: 5px;
+  color: #f9f9f9; }
+
+ÔÇï
 .g-signin2 {
   width: 90%;
   height: auto; }
