--- a/www-weread/_includes/indexnav.html
+++ b/www-weread/_includes/indexnav.html
@@ -8,7 +8,7 @@
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
   </button>
-  <a class="navbar-brand" href="index.html">WeRead</a>
+  <a class="navbar-brand" href="index.html">weRead</a>
 </div>
 
       <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
